--- a/web/form.css
+++ b/web/form.css
@@ -27,10 +27,19 @@ body {
     color: #0d2fb5;
 
 }
+#blur{
+    width: 100%;
+    height: 100%;
+}
+span{
+    color: red;
+    font-size: 16px;
+    font-weight: 700;
+}
 .registeration-container{
     display: grid;
     grid-template-rows: 0.1fr 1fr;
-    position:absolute;
+    position:fixed;
     top: 50%;
     left:50%;
     transform: translate(-50%, -50%);
@@ -40,6 +49,7 @@ body {
     border-radius: 10px;
     border: #478fe1 solid 2px;
     overflow: hidden;
+    transition: 0.3s ease-in-out;
     
 }
 .header{
@@ -69,6 +79,7 @@ input{
     width: 100%;
     padding: 8px;
 }
+
 input::placeholder{
     color: #637d9a;
 }
@@ -117,6 +128,82 @@ label{
     transition: all 0.3s ease;
 }
 
+
+
+/* Api pop up styling  */
+.active{
+    filter: blur(20px);
+    transition: 0.3s;
+    pointer-events: none;
+    user-select: none;
+}
+.popup-container{
+    position:fixed;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 650px;
+    max-height: 300px;
+    background-color: rgb(255, 255, 255);
+    z-index:2;
+    padding:20px;
+    overflow: auto;
+    overflow-x:auto;
+    transition: 0.2s ease-in-out;
+    border: #0d2fb5 solid 3px;
+    border-radius: 12px;
+    text-align: center;
+}
+.popup-container-show{
+    transition:all 0.3s ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+.popup-container h1{
+    margin-top: 5px;
+    margin-bottom: 10px;    
+    text-align: center;
+    
+}
+.popup-text p{
+    margin: 3px;
+    font-size: 18px;
+}
+.close-btn {
+    cursor:pointer;
+    position:absolute;
+    right:13px;
+    top:20px;
+    width:30px;
+    height:30px;
+    background:#0d2fb5;
+    color:#fff;
+    font-size:25px;
+    font-weight:600;
+    line-height:30px;
+    text-align:center;
+    border-radius:50%;
+}
+
+
+
+/* client side verficatation  */
+.success input {
+    border: #09c372 solid 2px;
+}
+
+.error input {
+    border: #ff3860 solid 2px;
+}
+
+.error {
+    color: #ff3860;
+    font-size: 9px;
+    margin-left: 7px;
+    margin-top: 5px;
+}
+
+
+
 @media screen and (max-width: 992px) {
     .registeration-container {
         width: fit-content;
@@ -130,6 +217,10 @@ label{
 
         grid-gap: 0.8em 1em;
         
+    }
+    label{
+        font-size: 12px;
+
     }
     input{
         width: auto;
@@ -154,5 +245,8 @@ label{
         width: 189px;
         padding: 10px;
         transition: all 0.3s ease;
+    }
+    .popup-container-show{
+        transform: translate(-50%, -50%) scale(0.8);
     }
 }
