linked header and footer to main page

--- a/Header.css
+++ b/Header.css
@@ -1,4 +1,4 @@
-header {
+/* header {
     background-color: white;
     color: #192C78;
     padding: 20px;
@@ -39,4 +39,77 @@ nav ul li a {
 
 nav ul li a:hover {
     text-decoration: underline;
+} */
+
+nav{
+    display: grid;
+    grid-template-columns: 1fr 1.25fr;
+    grid-column-gap: 15%;
+    align-items: center;
+    height: 8vh; 
+    position: fixed;
+    width: 100%;
+    transition: all .5s;
+}
+.logo{
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    font-size: 25px;
+    text-align: left;
+    padding-left: 15%; 
+}
+.logo a{
+    text-decoration: none;
+    color: white;
+}
+.menu{
+    display:flex;
+    grid-template-columns: repeat(6,1fr);
+    justify-content: space-between;
+    align-items: cenrter;
+    font-weight: bold;
+    margin-right: 5%;
+
+}
+.menu li {
+    list-style: none;
+    text-align: center;
+    padding: 5px;
+
+}
+.menu a{
+    color:rgb(255, 255, 255) ;
+    text-decoration: none;
+    font-size: 20px;
+    transition: all .3s;
+}
+.menu a:hover{
+    color:rgba(184, 184, 184, 0.696) ;
+    transition: all .3s;
+}
+.scrolled-nav{
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    grid-column-gap: 15%;
+    align-items: center;
+    background-color: #0C1434; 
+    position: fixed;
+    width: 100%;  
+    height: 60px;   
+    box-shadow: 0 2px 1rem #042299;
+    transition: all .3s;    
+    z-index: 1;
+}
+.scrolled-nav .logo a{
+    color: white;
+}
+.scrolled-nav .menu a{
+    color: white;
+    padding: 10px;  
+    transition: all .3s; 
+}
+.scrolled-nav .menu a:hover{
+
+    transition: all .3s;
+    color: #E63B60;
 }
