--- a/form.css
+++ b/form.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     /* background-color: var(--main-background-color); */
     background: linear-gradient(to bottom right, #89B7EB, #192C78);
@@ -34,7 +34,7 @@ body {
 
 #blur {
     width: 100%;
-    height: 100%;
+    height: inherit;
 }
 
 span {
@@ -46,7 +46,7 @@ span {
 .registeration-container {
     display: grid;
     grid-template-rows: 0.1fr 1fr;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
